# Prismalux

./: .directory  .gitignore  AVVIA_Prismalux.py  Avvia_Prismalux.bat  LICENSE  Prismalux  Prismalux.desktop  README.md  TODO.md  aggiorna.bat  aggiorna.sh  avvia.sh  avvia_qt.sh  build.bat  check_deps.py  code-guardian-SKILL.md  code-guardian.skill  crea_appimage.sh  crea_zip_windows.py  ollama_utils.py  output  requirements.txt  test_brutal_honesty.py  test_math_column_shift.py  test_prompt_levels.py  test_utils.py
ANDROID/SMARTPHONE/: CMakeLists.txt
ANDROID/TABLET/: CMakeLists.txt  tablet_nav_rail.cpp  tablet_nav_rail.h
ANDROID/android_app/: CMakeLists.txt  README_ANDROID.md  ai_client.cpp  ai_client.h  android_compat.h  local_llm_client.cpp  local_llm_client.h  main.cpp  mainwindow.cpp  mainwindow.h  rag_engine_simple.cpp  rag_engine_simple.h  style_mobile.qss  thermal_monitor.cpp  thermal_monitor.h
ANDROID/android_app/android/: AndroidManifest.xml
ANDROID/android_app/pages/: audio_page.cpp  audio_page.h  ble_page.cpp  ble_page.h  camera_page.cpp  camera_page.h  chat_page.cpp  chat_page.h  info_page.cpp  info_page.h  lavoro_page.cpp  lavoro_page.h  mcpaddons_page.cpp  mcpaddons_page.h  misure_page.cpp  misure_page.h  obs_page.cpp  obs_page.h  qr_scanner_dialog.cpp  qr_scanner_dialog.h  quiz_ccna_db.cpp  quiz_ccna_db.h  settings_page.cpp  settings_page.h  studio_page.cpp  studio_page.h
C_software/Qt_GUI/: CLAUDE.md  CMakeLists.txt  TODO.md  TODO.txt  ai_client.cpp  ai_client.h  build.bat  chat_history.cpp  hardware_monitor.cpp  hardware_monitor.h  mainwindow.cpp  mainwindow.h  prismalux.desktop  prismalux_paths.h  style.qss  test_buildsys  test_buildsys.cpp  test_golden  test_security  theme_manager.cpp  theme_manager.h
C_software/Qt_GUI/build_dbg/: CMakeCache.txt  Makefile  cmake_install.cmake
C_software/Qt_GUI/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
MCPs/gns3_mcp/: README.md  pyproject.toml  requirements.txt  server.py
MCPs/knowledge_mcp/: pyproject.toml  requirements.txt  server.py
MCPs/stable_diffusion_local/: README.md  pyproject.toml  requirements.txt  sd_local.py
Qt_GUI_v3/: CMakeLists.txt  TODO.md  ai_client.cpp  ai_client.h  build.bat  build.sh  chat_history.cpp  chat_history.h  hardware_monitor.cpp  hw_detect.c  hw_detect.h  main.cpp  mainwindow.cpp  mainwindow.h  monitor_panel.cpp  prismalux_paths.h  style.qss  theme_manager.cpp  theme_manager.h
Qt_GUI_v3/build_dbg/: CMakeCache.txt  Makefile  cmake_install.cmake
Qt_GUI_v3/pages/: agenti_page.cpp  agenti_page.h  impara_page.cpp  impara_page.h  impostazioni_page.cpp  impostazioni_page.h  manutenzione_page.cpp  manutenzione_page.h  personalizza_page.cpp  personalizza_page.h  pratico_page.cpp  programmazione_page.cpp  programmazione_page.h  simulatore_page.cpp  simulatore_page.h
Qt_GUI_v3/themes/: dark_amber.qss  dark_purple.qss  light.qss  themes.qrc
Qt_GUI_v3/widgets/: status_badge.h
gui/: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  GUI_BEST_PRACTICE.md  README_BUILD.md  ai_client.cpp  ai_client.h  ai_thinking_detect.h  app_config.h  build.bat  build.sh  build_installer_windows.bat  chat_history.cpp  chat_history.h  hardware_monitor.cpp  hardware_monitor.h  hw_detect.c  hw_detect.h  install_launcher.sh  lan_server.cpp  lan_server.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_slots.cpp  monitor_panel.cpp  monitor_panel.h  prismalux.desktop  prismalux_paths.h  rag_engine.cpp  rag_engine.h  style.qss  theme_manager.cpp  theme_manager.h
gui/fonts/: LEGGIMI.txt
gui/pages/: agenti_page.cpp  agenti_page.h  agenti_page_auto.cpp  agenti_page_bubbles.cpp  agenti_page_byzantine.cpp  agenti_page_consiglio.cpp  agenti_page_exec.cpp  agenti_page_feedback.cpp  agenti_page_files.cpp  agenti_page_format.cpp  agenti_page_knowledge.cpp  agenti_page_math.cpp  agenti_page_models.cpp  agenti_page_p.h  agenti_page_pipeline.cpp  agenti_page_stream.cpp  agenti_page_stt.cpp  agenti_page_tools.cpp  agenti_page_tts.cpp  agenti_page_ui.cpp  agenti_page_voice.cpp  agents_config_dialog.cpp  agents_config_dialog.h  app_controller_page.cpp  app_controller_page.h  app_controller_page_science.cpp  app_controller_page_slots.cpp  code_interpreter_widget.cpp  code_interpreter_widget.h  grafico_canvas.cpp  grafico_canvas_p.h  grafico_page.cpp  grafico_page.h  impara_page.cpp  impara_page.h  impostazioni_page.cpp  impostazioni_page.h  impostazioni_page_ai.cpp  impostazioni_page_altro.cpp  impostazioni_page_llm.cpp  (+47 more)
gui/tests/: TODO_team_pipeline_tests.md  TODO_test_mancanti.md  TODO_test_suite_complessa.md  mock_ai_client.h  test_agente_autonomo.cpp  test_agenti_byzantine.cpp  test_agenti_pipeline.cpp  test_agents_config_dialog.cpp  test_ai_integration.cpp  test_ai_stress.cpp  test_app_controller.cpp  test_chat_history.cpp  test_chat_history_stress.cpp  test_formula_parser.cpp  test_grafico.cpp  test_hardware_monitor.cpp  test_hw_detect_amd.cpp  test_impara_quiz.cpp  test_impostazioni_page.cpp  test_knowledge_injection.cpp  test_lan_server.cpp  test_lavoro_data.cpp  test_lavoro_page.cpp  test_manutenzione_bugs.cpp  test_manutenzione_cron.cpp  test_matematica_page.cpp  test_monitor_panel.cpp  test_onboarding.cpp  test_opencode_page.cpp  test_programmazione_page.cpp  test_qr_code_widget.cpp  test_rag_engine.cpp  test_rag_engine_avanzato.cpp  test_signal_lifetime.cpp  test_simulatore_algos.cpp  test_strumenti_rag.cpp  test_team_collab.cpp  test_theme_manager.cpp  test_thinking_detect.cpp  test_tutor_data.cpp
gui/themes/: base.qss  dark_amber.qss  dark_classic.qss  dark_cyan.qss  dark_green.qss  dark_lavender.qss  dark_ocean.qss  dark_purple.qss  dark_rainbow.qss  dark_sunset.qss  hacker.qss  light.qss  light_mint.qss  light_rose.qss  light_sand.qss  light_sky.qss  military.qss  neon.qss  pink.qss  solar.qss  themes.qrc  venom_blue.qss  venom_green.qss  venom_orange.qss  venom_red.qss
gui/widgets/: ai_error_widget.h  chart_widget.h  chat_bubble.cpp  chat_bubble.h  formula_parser.cpp  formula_parser.h  python_exec.h  qr_code_widget.cpp  qr_code_widget.h  status_badge.h  stt_whisper.h
(+412 files in other folders)
